# ClassGet_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: captcha.rs  display.rs  login.rs  main.rs  params.rs  parser.rs  post.rs
