[package]
name = "class_get"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.110"
tokio = { version = "1.21.0", features = ["full"] }
ddddocr = { git = "https://github.com/86maid/ddddocr.git", branch = "master" }
anyhow = "1.0.79"
image = "0.24.7"
base64 = "0.21.5"
soft-aes = "0.1.0"
log = "0.4.20"
structured-logger = "1.0.3"
simplelog = "0.12.1"
