[package]
name = "class_get"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
image = "0.25.5"
base64 = "0.22.1"
soft-aes = "0.2.2"
log = "0.4.20"
structured-logger = "1.0.3"
simplelog = "0.12.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.110"
tokio = { version = "1.21.0", features = ["full"] }

ddddocr = { git = "https://github.com/86maid/ddddocr.git", branch = "master" }

reqwest = { version = "0.12.12", features = [
    "blocking",
    "json",
    "rustls-tls",
], default-features = false }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
